[project]
name = "test_deps"
version = "1.0.0"
description = "AI Agent test-deps Project."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agentup>=0.5.7",  # AgentUp framework - provides all core functionality
]

